--- a/src/assets/sass/pages/_page-home.scss
+++ b/src/assets/sass/pages/_page-home.scss
@@ -19,26 +19,26 @@
     margin: 0 auto;
     grid-area: nav;
   }
+}
 
-  .page-title {
-    margin-top: 0.5em;
-    color: $color-primary;
-    font-size: 0.875rem;
-    grid-area: title;
+.page-title {
+  margin-top: 0.5em;
+  color: $color-primary;
+  font-size: 0.875rem;
+  grid-area: title;
 
-    @media (min-width: $small-screen) {
-      margin-top: 0;
-      font-size: 1.5rem;
-    }
+  @media (min-width: $small-screen) {
+    margin-top: 0;
+    font-size: 1.5rem;
+  }
 
-    @media (min-width: $medium-screen) {
-      margin-top: 0;
-      font-size: 2.25rem;
-    }
+  @media (min-width: $medium-screen) {
+    margin-top: 0;
+    font-size: 2.25rem;
   }
 }
 
-.section-photographers {
+.photographers-grid {
   --min: 19.375rem;
   display: grid;
 
