--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -1,12 +1,16 @@
 /* Buttons */
 .btn {
-  padding: clamp(0.375rem, 5%, 1.4375rem) clamp(1.125rem, 5%, 1.125rem);
+  padding: 0.375rem 1.125rem;
   border: 0;
   background-color: $color-primary;
   border-radius: 5px;
   color: $white;
   font-size: 1.125rem;
   font-weight: bold;
+
+  @media (min-width: $medium-screen) {
+    padding: 1.4375rem 1.125rem;
+  }
 
   &:hover,
   &:focus {
