--- a/src/assets/sass/pages/_page-home.scss
+++ b/src/assets/sass/pages/_page-home.scss
@@ -1,39 +1,26 @@
-.page-home {
-  .site-header {
-    display: grid;
-    column-gap: 2.5rem;
-    grid-template-areas: "home-link empty title" "nav nav nav";
-    grid-template-columns: auto 1fr auto;
-    row-gap: 1.875rem;
+.top-nav {
+  margin-top: 4.375rem;
 
-    @media (min-width: $large-screen) {
-      grid-template-areas: "home-link nav title";
-      grid-template-columns: 12.5rem 1fr auto;
-    }
-  }
-
-  .top-nav {
-    width: 100%;
-    align-self: center;
-    order: 3;
-    margin: 0 auto;
-    grid-area: nav;
+  @media (min-width: $medium-screen) {
+    padding: 0 20.3125rem 0 13.75rem;
+    margin-top: 0.8rem;
   }
 }
 
 .page-title {
-  margin-top: 0.5em;
+  position: absolute;
+  top: 3.4em;
+  right: 1.25rem;
   color: $color-primary;
   font-size: 0.875rem;
-  grid-area: title;
 
   @media (min-width: $small-screen) {
-    margin-top: 0;
+    top: 1.8em;
     font-size: 1.5rem;
   }
 
   @media (min-width: $medium-screen) {
-    margin-top: 0;
+    top: 1.1em;
     font-size: 2.25rem;
   }
 }
