--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -649,7 +649,7 @@ a:focus-visible,
   opacity: 0.5;
 }
 
-.lightbox__img {
+.lightbox__media {
   max-height: 100vh;
   animation: lightbox-in 300ms linear;
 }
