--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -36,7 +36,7 @@
   margin: 0;
 }
 
-.media__figure-video {
+.media__figure--video {
   --triangle-side: 2rem;
   --triangle-multiplier: 1.73205; // to get the height of an equilateral triangle
   --circle-multiplier: 1.1547; // to get the diameter of the circle
