--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,38 +168,6 @@ a:focus-visible,
 .btn-like > * {
   pointer-events: none;
 }
-.btn-like::before {
-  z-index: -1;
-  width: var(--heart-size);
-  height: var(--heart-size);
-  margin: auto;
-  background-color: rgba(128, 128, 128, 0.5);
-  border-radius: var(--heart-size);
-  content: "";
-  grid-area: grid;
-  opacity: 1;
-  transform: scale(0);
-  transform-origin: center center;
-  transition: transform 100ms ease-out, opacity 200ms 100ms ease-out;
-}
-.btn-like::after {
-  position: absolute;
-  z-index: 10;
-  right: 0;
-  bottom: 110%;
-  padding: 0.3em 0.7em;
-  background-color: #901c1c;
-  border-radius: 0.7em;
-  border-bottom-right-radius: 0;
-  color: #fff;
-  content: attr(data-tooltip);
-  font-size: 0.875rem;
-  opacity: 0;
-  transform: scale(0);
-  transform-origin: bottom right;
-  transition: transform 50ms ease-out, opacity 100ms linear;
-  white-space: nowrap;
-}
 .btn-like .btn-like__icon {
   position: relative;
   top: 1px;
@@ -212,12 +180,11 @@ a:focus-visible,
   transform-origin: center;
   transition: transform 100ms ease-out;
 }
-.btn-like:hover::after, .btn-like:focus-visible::after {
-  opacity: 1;
-  transform: scale(1);
-}
 .btn-like:hover .btn-like__icon, .btn-like:focus-visible .btn-like__icon {
   transform: scale(1.2);
+}
+.btn-like:active .btn-like__icon {
+  transform: scale(1.1);
 }
 .btn-like:focus-visible {
   box-shadow: none;
@@ -225,13 +192,6 @@ a:focus-visible,
 }
 .btn-like:focus-visible .btn-like__icon {
   fill: #05469f;
-}
-.btn-like:focus-visible::after {
-  background-color: #05469f;
-}
-.btn-like:active::before {
-  opacity: 0;
-  transform: scale(1.7);
 }
 
 /* Images */
@@ -652,7 +612,6 @@ a:focus-visible,
 
 .lightbox__media {
   max-width: 100%;
-  height: 100vh;
   animation: lightbox-in 300ms linear;
 }
 
