--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -664,6 +664,7 @@ a:focus-visible,
   width: 100%;
   padding: 1.25rem;
   background-color: #db8876;
+  overflow-y: auto;
 }
 @media (min-width: 62rem) {
   .modal__content {
