accessibility test ok

--- a/src/assets/sass/components/_tags.scss
+++ b/src/assets/sass/components/_tags.scss
@@ -18,6 +18,10 @@
   color: $color-primary;
   font-size: 0.75rem;
   text-decoration: none;
+
+  &::before {
+    content: "#";
+  }
 }
 
 .tag-link:hover,
