--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -285,6 +285,9 @@ a:focus-visible,
   font-size: 0.75rem;
   text-decoration: none;
 }
+.tag-link::before {
+  content: "#";
+}
 
 .tag-link:hover,
 .tag-link:focus,
@@ -598,7 +601,14 @@ a:focus-visible,
 
 .lightbox__figure {
   display: flex;
+  flex-direction: column-reverse;
   margin: 0;
+}
+.lightbox__figure figcaption {
+  margin-top: 0.625rem;
+  color: #901c1c;
+  font-size: 0.875rem;
+  font-weight: 400;
 }
 
 .lightbox__loader {
@@ -610,7 +620,7 @@ a:focus-visible,
 
 .lightbox__media {
   max-width: 100%;
-  max-height: 100vh;
+  max-height: 90vh;
   animation: lightbox-in 300ms linear;
 }
 
@@ -642,6 +652,10 @@ a:focus-visible,
     right: 2.5rem;
     width: 2.625rem;
     height: 2.625rem;
+  }
+
+  .lightbox__figure figcaption {
+    font-size: 1.5rem;
   }
 }
 .modal {
