--- a/src/assets/sass/components/_lightbox.scss
+++ b/src/assets/sass/components/_lightbox.scss
@@ -76,7 +76,15 @@
 
 .lightbox__figure {
   display: flex;
+  flex-direction: column-reverse;
   margin: 0;
+
+  figcaption {
+    margin-top: 0.625rem;
+    color: $color-primary;
+    font-size: 0.875rem;
+    font-weight: 400;
+  }
 }
 
 .lightbox__loader {
@@ -88,7 +96,7 @@
 
 .lightbox__media {
   max-width: 100%;
-  max-height: 100vh;
+  max-height: 90vh;
   animation: lightbox-in 300ms linear;
 }
 
@@ -121,5 +129,9 @@
     right: 2.5rem;
     width: 2.625rem;
     height: 2.625rem;
+  }
+
+  .lightbox__figure figcaption {
+    font-size: 1.5rem;
   }
 }
