alt text. Ready to deliver

--- a/src/assets/sass/components/_lightbox.scss
+++ b/src/assets/sass/components/_lightbox.scss
@@ -76,7 +76,7 @@
 
 .lightbox__figure {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   margin: 0;
 
   figcaption {
